--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,64 @@
-body{
-    background-color: coral;
+body {
+background-color: #e6d3d3;
+}
+#rightupimg{
+position: flex;
+margin-top: 20px;
+margin-left: 30px;
+visibility: hidden;
+}
+#leftupimg{
+position: absolute;
+margin-top: 20px;
+margin-right: 30px;
+visibility: hidden;
+}
+#leftdownimg{
+position: flex;
+margin-top: 20px;
+margin-right: 30px;
+visibility: hidden;
+}
+#rightdownimg{
+position: absolute;
+margin-top: 20px;
+margin-left: 30px;
+visibility: hidden;
 }
 
-#welcometxt{
-    text-align: center;
-    font-size: 5rem;
-    -webkit-text-stroke: 2px;
-    -webkit-text-stroke-color: black;
-    color: rgb(255, 255, 255);
+
+.images{
+height: 150px;
+width: 200px;
 }
-#imgpum{
-    width: 150px;
-    height: 100px;
+
+#butdiv{
+display: flex;
+justify-content: center;
+margin-top: 10%;
 }
-#pumpkinimgdiv{
-    padding-top: 50px ;
-    text-align: center;
+
+#info{
+text-align: center;
+font: 2rem sans-serif;
 }
-#optionsdiv{
-    padding-top: 5rem;
-    text-align: center;
+
+
+#bigBtn {
+padding-left: 120px;
+padding-top: 50px;
+padding-right: 120px;
+padding-bottom: 50px;
+cursor: pointer;
+background: #3b9855;
+font: 6rem sans-serif;
+-webkit-text-stroke: black 2px;
+border: none;
+border-radius: 15px;
+color: white;
+box-shadow: #3b9855 0px 10px 20px;
+}
+#bigBtn:active {
+transform: translateY(4px);
+box-shadow: #3b9855 0px 6px 6px;
 }
